fixed media modal out of screen

--- a/assets/styles/base/_bootstrap_addon.scss
+++ b/assets/styles/base/_bootstrap_addon.scss
@@ -41,11 +41,19 @@
 		max-height: 90vh;
 		max-width: 100vw !important;
 		width: fit-content !important;
+		margin: 1.75rem auto;
 
 		.modal-content {
 			height: 100%;
+			max-height: 90vh;
 
 			border-radius: 0.3rem;
+
+			.modal-header {
+				.modal-title {
+					max-width: 60vw;
+				}
+			}
 
 			.modal-body {
 				width: fit-content !important;
@@ -54,6 +62,7 @@
 					// height: 100%;
 					width: 100%;
 					width: 70vw;
+					aspect-ratio: initial;
 				}
 
 				.video_wrapper {
